test_features_err.txt
warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

=== Testing Basic Arithmetic ===
OK
OK
OK
OK
OK
=== Testing Floats & Math ===
OK
OK
=== Testing Strings ===
OK
=== Testing Control Flow (If/Else) ===
OK
=== Testing Loops ===
OK
=== Testing Functions ===
OK
=== Testing Arrays ===
=== Testing Generics (Option) ===

  Runtime error: [line 58] in <main>: Undefined global: Some

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.6 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues

warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

=== Testing Basic Arithmetic ===
OK
OK
OK
OK
OK
=== Testing Floats & Math ===
OK
OK
=== Testing Strings ===
OK
=== Testing Control Flow (If/Else) ===
OK
=== Testing Loops ===
OK
=== Testing Functions ===
OK
=== Testing Arrays ===
=== Testing Generics (Option) ===

  Runtime error: [line 58] in <main>: Undefined global: Some

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.6 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues

